[package]
name = "esdb"
version = "0.1.0"
authors = ["Odin Dutton <odindutton@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.59"
serde = "1.0.117"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
thiserror = "1.0.22"
persy = "0.11.1"
flurry = "0.3.1"
