[package]
name = "esdb"
version = "0.1.0"
authors = ["Odin Dutton <odindutton@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.59"
serde = "1.0.117"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
thiserror = "1.0.22"
zerocopy = "0.3.0"
byteorder = "1.3.4"
itertools = "0.9.0"
pretty-hex = "0.2.1"

[dev-dependencies]
tempfile = "3.2.0"
